fix promise devtools/old browser var & add link contrast-finder/translateRGBToHex

--- a/src/devtools/panel/tanaguru-devtools-panel.css
+++ b/src/devtools/panel/tanaguru-devtools-panel.css
@@ -1101,6 +1101,11 @@ th:last-child, td:last-child {
 	width: 15rem;
 }
 
+.item-actions a {
+	display: inline-block;
+	margin-top: 1rem;
+}
+
 table ul {
 	margin: 0;
 	padding: 0;
